--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ form {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background: rgba(0, 0, 0, 0.8);
+  position: fixed;
+  width: 30%;
+  height: 40%;
 }
 
 textarea {
@@ -30,7 +34,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: rgb(37, 37, 37);
+
   color: white;
 }
 
@@ -110,4 +114,12 @@ body {
   100% {
     background-position: 0 0;
   }
+}
+
+#myVideo {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
 }
