more styling and changed button

--- a/style.css
+++ b/style.css
@@ -9,18 +9,29 @@ form {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: rgba(0, 0, 0, 0.8);
+  background: rgba(0, 0, 0, 0.9);
+  border: 2px solid white;
   position: fixed;
   width: 30%;
-  height: 40%;
+  height: 45%;
+  box-shadow: 0px 0px 10pt 1pt rgb(255, 255, 255);
+  border-radius: 10%;
 }
 
 textarea {
-  margin: 20px;
+  border-radius: 5%;
+  font-size: 175%;
+  resize: none;
+  width: 200px;
+  height: 30px;
+  font-weight: 800;
+  border: none;
+  overflow: hidden;
+  text-align: center;
 }
 
 p {
-  font-size: 110%;
+  font-size: 150%;
   font-weight: 700;
 }
 
@@ -38,81 +49,94 @@ body {
   color: white;
 }
 
-.glow-on-hover {
-  width: 220px;
-  height: 50px;
-  border: none;
-  outline: none;
-  color: #fff;
-  background: #111;
-  cursor: pointer;
-  position: relative;
-  z-index: 0;
-  border-radius: 10px;
-  margin-bottom: 30px;
+.wrap {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.glow-on-hover:before {
-  content: "";
+.button {
+  min-width: 300px;
+  min-height: 60px;
+  font-family: "Nunito", sans-serif;
+  font-size: 22px;
+  text-transform: uppercase;
+  letter-spacing: 1.3px;
+  font-weight: 700;
+  color: #d7d7e0;
+  background: #d14fbb;
   background: linear-gradient(
-    45deg,
-    #ff0000,
-    #ff7300,
-    #fffb00,
-    #48ff00,
-    #00ffd5,
-    #002bff,
-    #7a00ff,
-    #ff00c8,
-    #ff0000
+    90deg,
+    rgb(230, 129, 191) 0%,
+    rgba(235, 116, 189, 0.835) 100%
   );
+  border: none;
+  border-radius: 1000px;
+  box-shadow: 12px 12px 24px rgba(235, 116, 189, 0.835);
+  transition: all 0.3s ease-in-out 0s;
+  cursor: pointer;
+  outline: none;
+  position: relative;
+  padding: 10px;
+}
+
+button::before {
+  content: "";
+  border-radius: 1000px;
+  min-width: calc(300px + 12px);
+  min-height: calc(60px + 12px);
+  border: 6px solid #ce5bc4;
+  box-shadow: 0 0 60px rgba(228, 117, 185, 0.64);
   position: absolute;
-  top: -2px;
-  left: -2px;
-  background-size: 400%;
-  z-index: -1;
-  filter: blur(5px);
-  width: calc(100% + 4px);
-  height: calc(100% + 4px);
-  animation: glowing 20s linear infinite;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   opacity: 0;
-  transition: opacity 0.3s ease-in-out;
-  border-radius: 10px;
+  transition: all 0.3s ease-in-out 0s;
 }
 
-.glow-on-hover:active {
-  color: #000;
+.button:hover,
+.button:focus {
+  color: #313133;
+  transform: translateY(-6px);
 }
 
-.glow-on-hover:active:after {
-  background: transparent;
-}
-
-.glow-on-hover:hover:before {
+button:hover::before,
+button:focus::before {
   opacity: 1;
 }
 
-.glow-on-hover:after {
-  z-index: -1;
+button::after {
   content: "";
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+  border: 6px solid #ce5bc4;
   position: absolute;
-  width: 100%;
-  height: 100%;
-  background: #111;
-  left: 0;
-  top: 0;
-  border-radius: 10px;
+  z-index: -1;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: ring 1.5s infinite;
 }
 
-@keyframes glowing {
+button:hover::after,
+button:focus::after {
+  animation: none;
+  display: none;
+}
+
+@keyframes ring {
   0% {
-    background-position: 0 0;
-  }
-  50% {
-    background-position: 400% 0;
+    width: 30px;
+    height: 30px;
+    opacity: 1;
   }
   100% {
-    background-position: 0 0;
+    width: 300px;
+    height: 300px;
+    opacity: 0;
   }
 }
 
