--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ form {
   justify-content: center;
   align-items: center;
   background: rgba(0, 0, 0, 0.9);
-  border: 2px solid white;
+  border: 2px solid rgb(255, 255, 255);
   position: fixed;
   width: 30%;
   height: 45%;
@@ -31,8 +31,12 @@ textarea {
 }
 
 p {
-  font-size: 150%;
+  font-size: 200%;
   font-weight: 700;
+}
+
+h1 {
+  font-size: 250%;
 }
 
 html,
@@ -45,7 +49,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
+  font-family: "Londrina Sketch", cursive;
   color: white;
 }
 
@@ -59,8 +63,8 @@ body {
 .button {
   min-width: 300px;
   min-height: 60px;
-  font-family: "Nunito", sans-serif;
-  font-size: 22px;
+  font-family: "Londrina Sketch", cursive;
+  font-size: 200%;
   text-transform: uppercase;
   letter-spacing: 1.3px;
   font-weight: 700;
