--- a/style.css
+++ b/style.css
@@ -9,7 +9,11 @@ form {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: rgba(0, 0, 0, 0.9);
+  background: linear-gradient(
+    45deg,
+    rgb(15, 15, 15) 0%,
+    rgba(65, 58, 62, 0.835) 100%
+  );
   border: 2px solid rgb(255, 255, 255);
   position: fixed;
   width: 30%;
@@ -31,12 +35,12 @@ textarea {
 }
 
 p {
-  font-size: 200%;
+  font-size: 250%;
   font-weight: 700;
 }
 
 h1 {
-  font-size: 250%;
+  font-size: 300%;
 }
 
 html,
@@ -51,6 +55,8 @@ body {
   align-items: center;
   font-family: "Londrina Sketch", cursive;
   color: white;
+  text-shadow: 3px 3px 0 black, -1px -1px 0 black, 1px -1px 0 black,
+    -1px 1px 0 black, 1px 1px 0 black;
 }
 
 .wrap {
@@ -64,6 +70,8 @@ body {
   min-width: 300px;
   min-height: 60px;
   font-family: "Londrina Sketch", cursive;
+  text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1),
+    0px 18px 23px rgba(0, 0, 0, 0.1);
   font-size: 200%;
   text-transform: uppercase;
   letter-spacing: 1.3px;
@@ -71,11 +79,11 @@ body {
   color: #d7d7e0;
   background: #d14fbb;
   background: linear-gradient(
-    90deg,
-    rgb(230, 129, 191) 0%,
-    rgba(235, 116, 189, 0.835) 100%
+    45deg,
+    rgb(236, 146, 201) 0%,
+    rgba(241, 143, 204, 0.835) 100%
   );
-  border: none;
+  border: 0.5px solid rgb(41, 38, 38);
   border-radius: 1000px;
   box-shadow: 12px 12px 24px rgba(235, 116, 189, 0.835);
   transition: all 0.3s ease-in-out 0s;
@@ -104,6 +112,7 @@ button::before {
 .button:focus {
   color: #313133;
   transform: translateY(-6px);
+  border: none;
 }
 
 button:hover::before,
