--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ form {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 10px;
   background: linear-gradient(
     45deg,
     rgb(15, 15, 15) 0%,
@@ -16,14 +17,15 @@ form {
   );
   border: 2px solid rgb(255, 255, 255);
   position: fixed;
-  width: 30%;
-  height: 45%;
+  width: 60vh;
+  height: 50vh;
   box-shadow: 0px 0px 10pt 1pt rgb(255, 255, 255);
   border-radius: 10%;
 }
 
 textarea {
   border-radius: 5%;
+  margin-bottom: 10px;
   font-size: 175%;
   resize: none;
   width: 200px;
@@ -37,6 +39,11 @@ textarea {
 p {
   font-size: 250%;
   font-weight: 700;
+}
+
+#string-display {
+  font-size: 300%;
+  margin-top: 20px;
 }
 
 h1 {
