--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ textarea {
   margin-bottom: 10px;
   font-size: 175%;
   resize: none;
-  width: 200px;
+  width: 300px;
   height: 30px;
   font-weight: 800;
   border: none;
@@ -44,6 +44,11 @@ p {
 #string-display {
   font-size: 300%;
   margin-top: 20px;
+  text-shadow: 3px 3px 0 rgb(209, 143, 176), -1px -1px 0 rgb(209, 143, 176),
+    1px -1px 0 rgb(209, 143, 176), -1px 1px 0 rgb(209, 143, 176),
+    1px 1px 0 rgb(209, 143, 176);
+  color: black;
+  word-spacing: 6px;
 }
 
 h1 {
