--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ form {
 
 textarea {
   border-radius: 5%;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
   font-size: 175%;
   resize: none;
   width: 300px;
@@ -53,6 +53,7 @@ p {
 
 h1 {
   font-size: 300%;
+  margin-bottom: 0;
 }
 
 html,
